force-app/main/default/objects/Wholesalers__c/Wholesalers__c.object-meta.xml
<CustomObject>
    <label>Wholesalers</label>
    <nameField>
        <displayFormat>WS-{000000}</displayFormat>
        <label>Wholesaler  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wholesalers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>