force-app/main/default/objects/Wholesalers__c/fields/Wholesaler__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wholesaler</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 AND (3 OR 4))</booleanFilter>
        <errorMessage>Value doesn&#39;t exist or record type is not equal to &quot;Customer&quot; or Subtype is not equal to &quot;ShipTo/Dropship&quot; or Parent Account subtype not equal to &quot;Sold To&quot;!</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <filterItems>
            <field>Account.Is_Ship_To__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Account.Parent.Is_Parent_SoldTo__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Account.Is_Parent_SoldTo__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Master Quote</relationshipLabel>
    <relationshipName>Wholesalers</relationshipName>
    <type>Lookup</type>
</CustomField>