force-app/main/default/objects/Wholesalers__c/fields/Wholesaler_Contact__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wholesaler Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Wholesaler__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Wholesalers</relationshipLabel>
    <relationshipName>Wholesalers</relationshipName>
    <type>Lookup</type>
</CustomField>