force-app/main/default/objects/Wholesalers__c/fields/WholeSellerParentAccount__c.field-meta.xml
<CustomField>
    <fullName>WholeSellerParentAccount__c</fullName>
    <description>Whole seller&#39;s Parent Account Id</description>
    <formula>CASESAFEID(  Wholesaler__r.ParentId  )</formula>
    <label>Wholesaler Parent Account</label>
    <type>Text</type>
</CustomField>