force-app/main/default/objects/Wholesalers__c/fields/WholeSellerParentAccountName__c.field-meta.xml
<CustomField>
    <fullName>WholeSellerParentAccountName__c</fullName>
    <formula>Wholesaler__r.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wholesaler Parent Account Name</label>
    <type>Text</type>
</CustomField>